--- a/hotbotIndex.html
+++ b/hotbotIndex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Grid layout</title>
+<title>Hotbot</title>
 <link rel="stylesheet" href="styles/styles.css">
 </head>
 
