--- a/hotbotIndex.html
+++ b/hotbotIndex.html
@@ -7,39 +7,27 @@
 </head>
 
 <body>
-
+<div class="navbar">
+  <div class="logo"><a href="index.html"><img src="images/Logo.png" alt=""></a></div>
+  <div class="udreBar">
+    <div class="bar">
+      <div class="stykke"> <img src="images/trekant.png" alt=""> </div>
+      <div class="desktop"> <a href="omOs.html">Om os</a> </div>
+      <div class="desktop"> <a href="kontakt.html">Kontakt</a> </div>
+      <div class="desktop"> <a href="#news">Pakker</a> </div>
+      <div class="desktop"> <a href="projekter.html">Projekter</a> </div>
+      <div class="desktop"> <a id="hotbot" href="hotbotIndex.html">Hotbot</a> </div>
+      <div class ="dropdownmenu burger">
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">drop<br>
+          </button>
+          <div id="myLinks" class="dropdown-content"> <a href="#">Hotbot</a> <a href="#">Projekter</a> <a href="#">Pakker</a> <a href="#news">Kontakt</a> <a href="#news">Om os</a> </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 	<div class="grid grid-pad"> 
-	
-		<div class="col-3-12 bar">
-			<div class="content">
-				<p>Logo</p>
-			</div>
-		</div>
-		<div class="col-2-12 bar">
-			<div class="content">
-				<p>Pakker</p>
-			</div>
-		</div>
-		<div class="col-2-12 bar">
-			<div class="content">
-				<p>Eksemplarer</p>
-			</div>
-		</div>
-		<div class="col-2-12 bar">
-			<div class="content">
-				<p>Kontakt</p>
-			</div>
-		</div>
-		<div class="col-3-12 bar">
-			<div class="content">
-				<p>Om os</p>
-			</div>
-		</div>
-		<div class="col-1-1 mission">
-			<div class="content">
-				<p>Mission Statement</p>
-			</div>
-		</div>
 		<div class="col-4-12 pakke">
 			<div class="content">
 				<p>Pakke 1</p>
