--- a/projekter.html
+++ b/projekter.html
@@ -51,59 +51,15 @@
         </div>
       </div>
     </div>
-    <div id="mission" class="col-1-1">
-      <div class="content"> <img src="images/Banner.jpg" alt="">
-        <div class="mission">
-          <h1>Mission Statement</h1>
-        </div>
-      </div>
-    </div>
-    <div class="punkter">
-      <div class="col-4-12">
-        <div class="content">
-          <h1> Webudvikling </h1>
-          <div>
-            <p>Vi er jeres digitale partner, uanset hvad jeres næste digitale projekt måtte være. Vi er her for at optimere jeres forretningsmæssige potentiale og støtte jer i digitaliseringsprocessen. Vi udvikler, designer, integrerer, markedsfører og projektstyrer – vi er et full-service bureau, der tager ansvar fra start til slut.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-4-12">
-        <div class="content">
-          <h1> Digital Security </h1>
-          <div>
-            <p>Digitaliseringen griber om sig. Det skaber en masse muligheder, men også helt nye udfordringer for borgere, virksomheder og myndigheder. I takt med, at vores interaktion og kommunikation bliver netbaseret, forøges risikoen for læk og misbrug af vores følsomme data. Kriminelle har i høj grad flyttet deres aktiviteter over på nettet, mens stater indsamler data og overvåger det digitale liv.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-4-12">
-        <div class="content">
-          <h1> Branding </h1>
-          <div>
-            <p> Med en branding strategi skaber du en stærkere position på markedet, så nye kunder bliver nemmere og billigere at tiltrække, samtidig med at nuværende kunder bliver mindre tilføjelige til at skifte leverandør. Ligeledes hjælper et stærkt brand til at tiltrække nye medarbejdere.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-	  <div class="pakker">
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Webpakke</h3>
-        <p>Webudvilking + branding</p>
-      </div>
-    </div>
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Industri</h3>
-        <p>Security + webudvikling + branding</p>
-      </div>
-    </div>
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Deluxe</h3>
-        <p>Security + webudvikling + branding + webshop</p>
-      </div>
-    </div>
+	  <div class="hjemmesidecut">
+	  <div class="col-4-12 hjemmeside"><img src="images/Mountain.png" alt=""></div>
 		  </div>
+	  <div class="hjemmesidecut">
+	  <div class="col-4-12 hjemmeside"><img src="images/tekkimya.jpg" alt=""></div>
+	  </div>
+	  <div class="hjemmesidecut">
+	  <div class="col-4-12 hjemmeside"><img src="images/Plumi.jpg" alt=""></div>
+	</div>
     <div class="col-1-1">
       <div class="content">
         <p>Footer</p>
