--- a/kontakt.html
+++ b/kontakt.html
@@ -1,118 +1,149 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Sweetbot</title>
-<link rel="stylesheet" href="styles/styles.css">
-</head>
+	<head>
+	<meta charset="UTF-8">
+	<title>Sweetbot</title>
+	<link rel="stylesheet" href="styles/styles.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>
+		$(document).ready(function() {
+  $('div.dropdown').each(function() {
+    var $dropdown = $(this);
 
-<body>
+    $("a.dropdown-link", $dropdown).click(function(e) {
+      e.preventDefault();
+      $div = $("div.dropdown-container", $dropdown);
+      $div.toggle();
+      $("div.dropdown-container").not($div).hide();
+      return false;
+    });
+
+});
+    
+  $('html').click(function(){
+    $("div.dropdown-container").hide();
+  });
+});
+	</script>
+	</head>
+
+	<body>
 <div class="navbar">
-  <div class="logo"><a href="index.html"><img src="images/Logo.png" alt=""></a></div>
-  <div class="udreBar">
+      <div class="logo"><a href="index.html"><img src="images/Logo.png" alt=""></a></div>
+      <div class="udreBar">
     <div class="bar">
-      <div class="stykke"> <img src="images/trekant.png" alt=""> </div>
-      <div class="desktop"> <a href="omOs.html">Om os</a> </div>
-      <div class="desktop"> <a href="kontakt.html">Kontakt</a> </div>
-      <div class="desktop"> <a href="#news">Pakker</a> </div>
-      <div class="desktop"> <a href="projekter.html">Projekter</a> </div>
-      <div class="desktop"> <a id="hotbot" href="hotbotIndex.html">Hotbot</a> </div>
-      <div class ="dropdownmenu burger">
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">drop<br>
-          </button>
-          <div id="myLinks" class="dropdown-content"> <a href="#">Hotbot</a> <a href="#">Projekter</a> <a href="#">Pakker</a> <a href="#news">Kontakt</a> <a href="#news">Om os</a> </div>
-        </div>
+          <div class="stykke"> <img src="images/trekant.png" alt=""> </div>
+          <div class="desktop"> <a href="omOs.html">Om os</a> </div>
+          <div class="desktop  active"> <a href="kontakt.html">Kontakt</a> </div>
+          <div class="desktop"> <a href="index.html#pakker">Pakker</a> </div>
+          <div class="desktop"> <a href="projekter.html">Projekter</a> </div>
+          <div class="desktop"> <a id="hotbot" href="hotbotIndex.html">Hotbot</a> </div>
+          <div id="dropdown-1" class="dropdown dropdown-processed burger"> <a class="dropdown-link" href="#"><img id="burger" src="images/burger.png" alt="options"></a>
+        <div class="dropdown-container" style="display: none;">
+              <ul>
+            <li><a href="hotbotIndex.html">Hotbot</a></li>
+            <li><a href="projekter.html">Projekter</a></li>
+            <li><a href="index.html#pakker">Pakker</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="omOs.html">Om os</a></li>
+          </ul>
+            </div>
       </div>
-    </div>
+        </div>
   </div>
-</div>
+    </div>
 <div id="udreGrid" class="udreGrid grid">
-  <div id="grid" class="grid grid-pad">
+      <div id="grid" class="grid grid-pad">
     <div id="bar" class="bar">
-      <div class="hide-on-mobile">
+          <div class="hide-on-mobile">
         <div class="col-2-12 bar midt">
-          <div class="content"> </div>
-        </div>
+              <div class="content"> </div>
+            </div>
         <div class="col-2-12 bar midt">
-          <div class="content"> <a href="index.html"> </a>
+              <div class="content"> <a href="index.html"> </a>
             <div class="centered"> </div>
           </div>
-        </div>
+            </div>
         <div class="col-2-12 bar midt">
-          <div class="content"> <a href="index.html"> </a>
+              <div class="content"> <a href="index.html"> </a>
             <div class="centered"> </div>
           </div>
-        </div>
+            </div>
         <div class="col-3-12 bar">
-          <div class="content"> <a href="index.html"> </a>
+              <div class="content"> <a href="index.html"> </a>
             <div class="centered"> </div>
           </div>
-        </div>
+            </div>
       </div>
-    </div>
+        </div>
     <div id="mission" class="col-1-1">
-      <div class="content"> <img src="images/Banner.jpg" alt="">
+          <div class="content"> <img src="images/Banner.jpg" alt="">
         <div class="mission">
-          <h1>Mission Statement</h1>
-        </div>
+              <h1>Mission Statement</h1>
+            </div>
       </div>
-    </div>
+        </div>
     <div class="punkter">
-      <div class="col-4-12">
+          <div class="col-4-12">
         <div class="content">
-          <h1> Webudvikling </h1>
-          <div>
+              <h1> Webudvikling </h1>
+              <div>
             <p>Vi er jeres digitale partner, uanset hvad jeres næste digitale projekt måtte være. Vi er her for at optimere jeres forretningsmæssige potentiale og støtte jer i digitaliseringsprocessen. Vi udvikler, designer, integrerer, markedsfører og projektstyrer – vi er et full-service bureau, der tager ansvar fra start til slut.</p>
           </div>
-        </div>
+            </div>
       </div>
-      <div class="col-4-12">
+          <div class="col-4-12">
         <div class="content">
-          <h1> Digital Security </h1>
-          <div>
+              <h1> Digital Security </h1>
+              <div>
             <p>Digitaliseringen griber om sig. Det skaber en masse muligheder, men også helt nye udfordringer for borgere, virksomheder og myndigheder. I takt med, at vores interaktion og kommunikation bliver netbaseret, forøges risikoen for læk og misbrug af vores følsomme data. Kriminelle har i høj grad flyttet deres aktiviteter over på nettet, mens stater indsamler data og overvåger det digitale liv.</p>
           </div>
-        </div>
+            </div>
       </div>
-      <div class="col-4-12">
+          <div class="col-4-12">
         <div class="content">
-          <h1> Branding </h1>
-          <div>
+              <h1> Branding </h1>
+              <div>
             <p> Med en branding strategi skaber du en stærkere position på markedet, så nye kunder bliver nemmere og billigere at tiltrække, samtidig med at nuværende kunder bliver mindre tilføjelige til at skifte leverandør. Ligeledes hjælper et stærkt brand til at tiltrække nye medarbejdere.</p>
           </div>
+            </div>
+      </div>
         </div>
+    <div class="pakker">
+          <div class="col-4-12 pakke">
+        <div class="content">
+              <h3>Webpakke</h3>
+              <p>Webudvilking + branding</p>
+            </div>
       </div>
-    </div>
-	  <div class="pakker">
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Webpakke</h3>
-        <p>Webudvilking + branding</p>
+          <div class="col-4-12 pakke">
+        <div class="content">
+              <h3>Industri</h3>
+              <p>Security + webudvikling + branding</p>
+            </div>
       </div>
-    </div>
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Industri</h3>
-        <p>Security + webudvikling + branding</p>
+          <div class="col-4-12 pakke">
+        <div class="content">
+              <h3>Deluxe</h3>
+              <p>Security + webudvikling + branding + webshop</p>
+            </div>
       </div>
-    </div>
-    <div class="col-4-12 pakke">
-      <div class="content">
-		  <h3>Deluxe</h3>
-        <p>Security + webudvikling + branding + webshop</p>
-      </div>
-    </div>
-		  </div>
+        </div>
     <div class="col-1-1">
-      <div class="content">
+          <div class="content">
         <p>Footer</p>
       </div>
-    </div>
+        </div>
   </div>
-	  
-</div>
+    </div>
 <script>
+	document.addEventListener('mouseup', function (e) {
+    var container = document.getElementById('myLinks');
+
+    if (!container.contains(e.target)) {
+        container.style.display = 'none';
+    }
+}.bind(this));
 function myFunction() {
   var x = document.getElementById("myLinks");
   if (x.style.display === "block") {
