--- a/index.html
+++ b/index.html
@@ -112,30 +112,43 @@
       </div>
         </div>
     <div class="pakker">
-          <div class="col-4-12 pakke">
+          <div class="col-4-12 pakke sweetbot-pakker">
         <div id="pakker" class="content">
-              <h3>Webpakke</h3>
-              <p>Webudvilking + branding</p>
+              <h2>Lille Pakke</h2>
+              <p>Til firmaer hvis hjemmeside primære funktion er portefølje baseret (Galleri, kontakt info o.l.). Inkluderer hjemmesidedesing, hosting og support tilknyttet i hvad der svare til 2 arbejdstimer om måneden.
+</p><div class="bunden"><h3>Pris: Oprettelse: 5000 Kr. Derefter pr måned: 450 kr.</h3></div>
             </div>
       </div>
-          <div class="col-4-12 pakke">
+          <div class="col-4-12 pakke sweetbot-pakker">
         <div class="content">
-              <h3>Industri</h3>
-              <p>Security + webudvikling + branding</p>
+              <h2>Mellem Pakke</h2>
+              <p> Inkluderer mulighed for særlige funktioner på hjemmesiden samt digital markedsføring. 
+Vi sørger for at designe hjemmesiden, hosting og har support i hvad der svare til 4 arbejdstimer om måneden.  
+</p>
+			<h3 class="bunden">Pris: Oprettelse 15000. Derefter pr måned: 1500.</h3>
             </div>
       </div>
-          <div class="col-4-12 pakke">
+          <div class="col-4-12 pakke sweetbot-pakker">
         <div class="content">
-              <h3>Deluxe</h3>
-              <p>Security + webudvikling + branding + webshop</p>
+              <h2>Stor Pakke</h2>
+              <p>Vi skræddersyer en branding strategi og visuel identitet til jer, samt implementerer disse til jeres hjemmeside. I får tilmeld mulighed for optimal digital sikkerhed og vi står for den digitale markedsføring i samråd med jer.</p>
+			<h3 class="bunden">Pris: 30000 kr.. Derefter pr måned: 3500 kr.</h3>
             </div>
       </div>
         </div>
-    <div class="col-1-1">
-          <div class="content">
-        <p>Footer</p>
-      </div>
-        </div>
+   <div id="footer" class="col-1-1 footer">
+		<div class="col-8-12 links">
+			<p  id="tlf-nr"><a class="text-white" href="tel:004512345678">Tlf.: +45 12345678 </a> </p>
+          <p  id="mail-text"><a class="text-white" href="mailto:kontakt@sweetbot.dk">Kontakt@Sweetbot.dk</a> </p>
+          <a href="tel:004512345678"><img class="kontakt-icon1 text-center" src="./icons/tlfart.png" alt="phone icon"></a> <a href="mailto:kontakt@sweetbot.dk"><img class="kontakt-icon2 text-center" src="./icons/mailart.png" alt="mail icon"></a>
+			</div>
+			<div class="col-4-12 icons">
+			<a href="https://www.facebook.com/" target="_blank"><img class="fb" src="./icons/fbart.png" alt="facebook icon" width="100" height="100"></a> <a href="https://www.instagram.com/" target="_blank"><img class="insta" src="./icons/instaart.png" alt="instagram icon" width="100" height="100"> </a> <a href="https://www.linkedin.com/" target="_blank"><img class="linkedin" src="./icons/linkart.png" alt="linkedin icon" width="100" height="100" ></a>
+			</div>
+			<div class="col-1-1 copyright" >
+			<p> &copy; All rights reserved</p>
+			</div>
+	</div>
   </div>
     </div>
 </body>
