--- a/hotbotIndex.html
+++ b/hotbotIndex.html
@@ -52,49 +52,52 @@
         </div>
   </div>
     </div>
+	<div class="hotbot-imgs">
+	<img src="icons/hotbotlogo.png" alt="hotbot logo" class="hotbot-logo">
+	</div>
+	<div class="hotbot-imgs"> <img src="icons/hotbot1.png" alt="hotbot ecommerce screendump"> <img src="icons/hotbot2.png" alt="hotbot ecommerce screendump"></div>
 <div class="grid grid-pad">
-      <div class="col-4-12 pakke">
+      <div class="col-4-12  hotbot-pakker">
     <div class="content">
-          <p>Pakke 1</p>
+		<h2> Lille Pakke</h2>
+          <p>Indeholder det basale du skal bruge, for at have en webshop kørende. Inkl. Support.
+ 
+</p><h3>199 kr. pr. måned + 2% pr køb.</h3>
         </div>
   </div>
-      <div class="col-4-12 pakke">
+      <div class="col-4-12 hotbot-pakker">
     <div class="content">
-          <p>Pakke 2</p>
-        </div>
-  </div>
-      <div class="col-4-12 pakke">
-    <div class="content">
-          <p>Pakke 3</p>
-        </div>
-  </div>
-      <div class="col-1-1 noter">
-    <div class="content">
-          <p>Bruger noter</p>
-        </div>
-  </div>
-      <div class="col-1-1">
-    <div class="content">
-          <p>Footer</p>
-        </div>
-  </div>
-    </div>
-<script>
-	document.addEventListener('mouseup', function (e) {
-    var container = document.getElementById('myLinks');
+		<h2>Mellem Pakke</h2>
+          <p>Indeholder det basale du skal bruge, for at have en webshop kørende. Inkl. Support.
++ Gavekort,  Professionelle rapporter, 
 
-    if (!container.contains(e.target)) {
-        container.style.display = 'none';
-    }
-}.bind(this));
-function myFunction() {
-  var x = document.getElementById("myLinks");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-</script>
+</p><h3>499 kr. pr. måned + 1% pr køb.</h3>
+        </div>
+  </div>
+      <div class="col-4-12  hotbot-pakker">
+    <div class="content">
+		<h2>Stor Pakke</h2>
+          <p>Indeholder det basale du skal bruge, for at have en webshop kørende. Inkl. Support.
++ Gavekort, Professionelle rapporter, Avanceret rapport-bygger, m.m.
+
+</p><h3>1799 kr. pr. måned  + 0.5% pr køb</h3>
+        </div>
+  </div>
+     
+     </div>
+		<div id="footer" class="col-1-1 footer">
+		<div class="col-8-12 links">
+			<p  id="tlf-nr"><a class="text-white" href="tel:004512345678">Tlf.: +45 12345678 </a> </p>
+          <p  id="mail-text"><a class="text-white" href="mailto:kontakt@sweetbot.dk">Kontakt@Sweetbot.dk</a> </p>
+          <a href="tel:004512345678"><img class="kontakt-icon1 text-center" src="./icons/tlfart.png" alt="phone icon"></a> <a href="mailto:kontakt@sweetbot.dk"><img class="kontakt-icon2 text-center" src="./icons/mailart.png" alt="mail icon"></a>
+			</div>
+			<div class="col-4-12 icons">
+			<a href="https://www.facebook.com/" target="_blank"><img class="fb" src="./icons/fbart.png" alt="facebook icon" width="100" height="100"></a> <a href="https://www.instagram.com/" target="_blank"><img class="insta" src="./icons/instaart.png" alt="instagram icon" width="100" height="100"> </a> <a href="https://www.linkedin.com/" target="_blank"><img class="linkedin" src="./icons/linkart.png" alt="linkedin icon" width="100" height="100" ></a>
+			</div>
+			<div class="col-1-1 copyright" >
+			<p> &copy; All rights reserved</p>
+			</div>
+	</div>
+
 </body>
 </html>
