--- a/omOs.html
+++ b/omOs.html
@@ -52,6 +52,7 @@
         </div>
   </div>
     </div>
+		<main>
 <div id="udreGrid" class="udreGrid grid">
       <div id="grid" class="grid grid-pad">
     <div id="bar" class="bar">
@@ -114,29 +115,22 @@
         <p>Webudvikler</p>
       </div>
         </div>
-    <div class="col-1-1">
-          <div class="content">
-        <p>Footer</p>
-      </div>
-        </div>
+    <div id="footer" class="col-1-1 footer">
+		<div class="col-8-12 links">
+			<p  id="tlf-nr"><a class="text-white" href="tel:004512345678">Tlf.: +45 12345678 </a> </p>
+          <p  id="mail-text"><a class="text-white" href="mailto:kontakt@sweetbot.dk">Kontakt@Sweetbot.dk</a> </p>
+          <a href="tel:004512345678"><img class="kontakt-icon1 text-center" src="./icons/tlfart.png" alt="phone icon"></a> <a href="mailto:kontakt@sweetbot.dk"><img class="kontakt-icon2 text-center" src="./icons/mailart.png" alt="mail icon"></a>
+			</div>
+			<div class="col-4-12 icons">
+			<a href="https://www.facebook.com/" target="_blank"><img class="fb" src="./icons/fbart.png" alt="facebook icon" width="100" height="100"></a> <a href="https://www.instagram.com/" target="_blank"><img class="insta" src="./icons/instaart.png" alt="instagram icon" width="100" height="100"> </a> <a href="https://www.linkedin.com/" target="_blank"><img class="linkedin" src="./icons/linkart.png" alt="linkedin icon" width="100" height="100" ></a>
+			</div>
+			<div class="col-1-1 copyright" >
+			<p> &copy; All rights reserved</p>
+			</div>
+	</div>
   </div>
     </div>
-<script>
-	document.addEventListener('mouseup', function (e) {
-    var container = document.getElementById('myLinks');
+			</main>
 
-    if (!container.contains(e.target)) {
-        container.style.display = 'none';
-    }
-}.bind(this));
-function myFunction() {
-  var x = document.getElementById("myLinks");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-</script>
 </body>
 </html>
