--- a/kontakt.html
+++ b/kontakt.html
@@ -55,7 +55,7 @@
 			msg.html('Venligst udfyld alle felter. Tak.').css('color', '#DF9B67');
 		   } else{ // dvs. hvis tekstfelt har et værdi (er udfyldt)
 			  var brugerensNavn = $('#tekstfelt').val();
-			  msg.html('Tak, ' + brugerensNavn +'.Vi vender tilbage hurtigst muligt.').css('color', '#C9DB50');
+			  msg.html('Tak, ' + brugerensNavn +'.Vi vender tilbage hurtigst muligt.').css('color', '#C9DB50','font-family', 'lato');
 		   }	   
 			
 	}
